# mmt_multipole_inversion

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  build.py  build_extension.py  pyproject.toml  setup.py
.github/workflows/: TEST_manual-build-and-publish.yml  manual-build-and-publish.yml
chest/: packages_HTML.dot
doc/: conf.py  index.rst  installation.rst  requirements.txt
doc/_static/: multinv.css
doc/code/: source_code.rst
doc/source/: index.rst  modules.rst  multipole_inversion.magnetic_sample_modules.rst  multipole_inversion.multipole_field.rst  multipole_inversion.rst  multipole_inversion.susceptibility_modules.rst
doc/tutorial/: tutorial_basics.ipynb  tutorial_basics.py
mmt_multipole_inversion/: __about__.py  __init__.py  magnetic_sample.py  multipole_inversion.py  plot_tools.py
mmt_multipole_inversion/magnetic_sample_modules/: __init__.py  maxwell_cartesian_polynomials.py
mmt_multipole_inversion/multipole_field/: multipole_field_MCP.py  multipole_field_SHB.py
mmt_multipole_inversion/susceptibility_modules/: __init__.py  _flux_integration_sympy.py  maxwell_cartesian_polynomials.py  spherical_harmonics_basis_area.py  spherical_harmonics_basis_volume.py
mmt_multipole_inversion/susceptibility_modules/cuda/: cudalib.pyx  spherical_harmonics_basis.cu  spherical_harmonics_basis.cuh
mmt_multipole_inversion/susceptibility_modules/pylops/: pylopsclass.py  pylopsclass_cuda.py
mmt_multipole_inversion/susceptibility_modules/scipym/: spm_functions.py
mmt_multipole_inversion/susceptibility_modules/torchm/: torch_functions.py
multipole_inversion/: __init__.py  magnetic_sample.py  multipole_field.py  multipole_inversion.py  plot_tools.py
multipole_inversion/magnetic_sample_modules/: maxwell_cartesian_polynomials.py  spherical_harmonics_basis.py
multipole_inversion/multipole_field/: multipole_field_MCP.py  multipole_field_SHB.py
multipole_inversion/susceptibility_modules/: __init__.py  cartesian_spherical_harmonics.py  maxwell_cartesian_polynomials.py  spherical_harmonics_basis.py
multipole_inversion/susceptibility_modules/cuda/: cudalib.pyx  spherical_harmonics_basis.cu  spherical_harmonics_basis_c.cu  spherical_harmonics_basis_c.cuh  susceptibility_cudalib.pyx
tests/: multipoles_inversion_test.py  test_forward_model.py  test_inversion.py  test_inversion_pylops.py  test_inversion_torch.py  test_synthetic_sample.py  test_synthetic_sample_iterative.py
tests/masks/: ImageProcessing.py
