[tool.poetry]
name = "mmt_multipole_inversion"
version = "1.0"
description = "Library to generate scan grid measurements from multipole sources and perform numerical inversions"
authors = ["D. Cortés-Ortuño <d.i.cortes@uu.nl>", "K. Fabian", "L. V. de Groot"]
license = "MIT"
readme = "README.md"

packages = [
    {include = "mmt_multipole_inversion"}
]

include = [
    # CUDA/C extensions must be included in the wheel distributions
    {path = "mmt_multipole_inversion/susceptibility_modules/cuda/*.so", format = "wheel"},
    {path = "mmt_multipole_inversion/susceptibility_modules/cuda/*.pyd", format = "wheel"},
]

[tool.poetry.build]
generate-setup-file = false
script = "build_extension.py"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = ">=1.23"
scipy = "^1.7.0"
matplotlib = "^3.2"
numba = ">=0.56"
Cython = ">=3.0.0"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.0"
pytest = "^7.1.2"
requests = "^2.28.1"
Shapely = "^2.0.0"
jupytext = "^1.14.1"

[build-system]
requires = ["setuptools", "poetry-core>=1.8.0", "cython>=3.0.0", "numpy>=1.23"]
build-backend = "poetry.core.masonry.api"
